Edited wiki page Utils_Queries through web user interface.

--- a/wiki/Utils_Queries.wiki
+++ b/wiki/Utils_Queries.wiki
@@ -3,3 +3,12 @@
 <code>
 update addclav cl set cl.c_clave = pkg_seguridad.get_hash('lcalixto','123','1') where cl.nid_clave = 2;
 </code>
+
+<code>
+
+select * from admperm;
+select * from stdrope where nid_permiso = 57;
+select * from stmrole;
+select * from adduspe where nid_permiso = 57;
+
+</code>
