Edited wiki page Utils_Queries through web user interface.

--- a/wiki/Utils_Queries.wiki
+++ b/wiki/Utils_Queries.wiki
@@ -5,7 +5,7 @@ update addclav cl set cl.c_clave = pkg_seguridad.get_hash('lcalixto','123','1') 
 </code>
 
 <code>
-
+Para saber que usuarios y que roles tienen el permiso de pagar factura
 select * from admperm;
 select * from stdrope where nid_permiso = 57;
 select * from stmrole;
