Edited wiki page Cosas_a_Consultar through web user interface.

--- a/wiki/Cosas_a_Consultar.wiki
+++ b/wiki/Cosas_a_Consultar.wiki
@@ -1,2 +1,5 @@
 Registrar Empresa
-* Que es el certificado de inscripcion (Tipo Proveedor) que validaciones deberia tener
+
+<code>
+ Que es el certificado de inscripcion (Tipo Proveedor) que validaciones deberia tener
+</code>
