--- a/wiki/Pendientes_SILAT.wiki
+++ b/wiki/Pendientes_SILAT.wiki
@@ -1,16 +1,16 @@
 #summary Resumen de los pendientes
 
   # Cambiar las comparaciones de string strVariable.equals("string") por "string".equals(strVariable)
-  # No usar sequence, sino stmcodi
+  # ~~No usar sequence, sino stmcodi
   # Uso del logger
   # Agregar indices
   # Usar el setParameter
   # Mejorar los queries
   # Uso de suggestItems
-  # En registrar Guia, quitar lo que es manifiesto, crearle su propia pantalla o en el mismo consultar manifiesto
+  # ~~En registrar Guia, quitar lo que es manifiesto, crearle su propia pantalla o en el mismo consultar manifiesto
 
 
 //////////////////////////////////////////////////////////////77 
 
-  # Para TP  -  agregarle un validator a placa
-  # Para TP  -  validar que una licencia solo pertenezca a un chofer validator si ya existe esa licencia. Y DARLE LA OPCION POR  MENSAJE.
+  # ~~Para TP  -  agregarle un validator a placa
+  # ~~Para TP  -  validar que una licencia solo pertenezca a un chofer validator si ya existe esa licencia. Y DARLE LA OPCION POR  MENSAJE.
