--- a/wiki/Pendientes_SILAT.wiki
+++ b/wiki/Pendientes_SILAT.wiki
@@ -13,4 +13,4 @@
 //////////////////////////////////////////////////////////////77 
 
   # ~~Para TP  -  agregarle un validator a placa
-  # ~~Para TP  -  validar que una licencia solo pertenezca a un chofer   #~~validator si ya existe esa licencia. Y DARLE LA OPCION POR  MENSAJE.
+  # ~~Para TP  -  validar que una licencia solo pertenezca a un chofer    ~~validator si ya existe esa licencia. Y DARLE LA OPCION POR  MENSAJE.
